--- a/legend-of-zelda-room-transitions/.gitignore
+++ b/legend-of-zelda-room-transitions/.gitignore
@@ -1,3 +1,20 @@
 # Godot 4+ specific ignores
 .godot/
 /android/
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+
+# Mono-specific ignores
+.mono/
+data_*/
+.vs/
+mono_crash.*.json
+
+# System/tool-specific ignores
+.DS_Store
+*~
+*.blend1
